5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1798_2564.log
== TEST (2019-06-05 15:14:53) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1:")))
vet2 = array(eval(input("vetor2:")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
	elif(vet1[elemento] = vet2[elemento]):
	elif(vet1[elemento] < vet2[elemento]):
print(vetn)
		
	


-- ERROR:
File "XXXX", line 9
    elif(vet1[elemento] = vet2[elemento]):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:15:33) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1:")))
vet2 = array(eval(input("vetor2:")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
	if(vet1[elemento] = vet2[elemento]):
	if(vet1[elemento] < vet2[elemento]):
print(vetn)
		
	


-- ERROR:
File "XXXX", line 9
    if(vet1[elemento] = vet2[elemento]):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:16:15) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1:")))
vet2 = array(eval(input("vetor2:")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
		elif(vet1[elemento] = vet2[elemento]):
		elif(vet1[elemento] < vet2[elemento]):
print(vetn)
		
	


-- ERROR:
File "XXXX", line 9
    elif(vet1[elemento] = vet2[elemento]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:16:32) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1:")))
vet2 = array(eval(input("vetor2:")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
		elif(vet1[elemento] == vet2[elemento]):
		elif(vet1[elemento] < vet2[elemento]):
print(vetn)
		
	


-- ERROR:
File "XXXX", line 9
    elif(vet1[elemento] == vet2[elemento]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:17:08) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1:")))
vet2 = array(eval(input("vetor2:")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
	elif(vet1[elemento] == vet2[elemento]):
	elif(vet1[elemento] < vet2[elemento]):
print(vetn)
		
	


-- ERROR:
File "XXXX", line 9
    elif(vet1[elemento] == vet2[elemento]):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:21:37) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1:")))
vet2 = array(eval(input("vetor2:")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
		vetn[elemento] = vetn[elemento] + 1
	elif(vet1[elemento] == vet2[elemento]):
	elif(vet1[elemento] < vet2[elemento]):
print(vetn)
		
	


-- ERROR:
File "XXXX", line 11
    elif(vet1[elemento] < vet2[elemento]):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:23:07) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1:")))
vet2 = array(eval(input("vetor2:")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] == vet2[elemento]):
		vetn[1] = vetn[1] + 1
	elif(vet1[elemento] < vet2[elemento]):
		vetn[2] = vetn + 1
print(vetn)
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:23:30) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1:")))
vet2 = array(eval(input("vetor2:")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] == vet2[elemento]):
		vetn[1] = vetn[1] + 1
	elif(vet1[elemento] < vet2[elemento]):
		vetn[2] = vetn[2] + 1
print(vetn)
		
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:23:54) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1:")))
vet2 = array(eval(input("vetor2:")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] == vet2[elemento]):
		vetn[1] = vetn[1] + 1
	elif(vet1[elemento] < vet2[elemento]):
		vetn[2] = vetn[2] + 1
print(vetn)
		
	


-- EXECUTION TIME:
1.07277
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
